# usps-client

./: .gitignore  .readthedocs.yml  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/usps_client/: base_model.py  client.py  models.py  shims.py
tests/integration/: conftest.py  test_client.py
tests/unit/: conftest.py  test_client.py
tests/unit/fixtures/: lookup_cities_error.xml  lookup_cities_response.xml  standardize_response.xml
